--- a/lw2/task2/style.css
+++ b/lw2/task2/style.css
@@ -19,80 +19,80 @@ html,body {
   cursor: pointer;
 }
 /*Размер*/
-.button-x-large {
+.button.button-x-large {
   font-size: 1.8em;
 }
-.button-large {
+.button.button-large {
   font-size: 1.4em;
 }
-.button-medium {
+.button.button-medium {
   font-size: 1em;
 }
-.button-small {
+.button.button-small {
   font-size: 0.9em;
 }
-.button-x-small {
+.button.button-x-small {
   font-size: 0.7em;
 }
 /*Закругления*/
-.button-rounded {
+.button.button-rounded {
   border-radius: 0.4em;
 }
-.button-x-rounded {
+.button.button-x-rounded {
   border-radius: 1em;
 }
 /*Цвета*/
-.button-primary {
+.button.button-primary {
   color: #9477a7;
   background-color: white;
   border: solid 3px #9477a7;
 }
-.button-success {
+.button.button-success {
   color: #87c057;
   background-color: white;
   border: solid 3px #87c057;
 }
-.button-info {
+.button.button-info {
   color: #4da6e2;
   background-color: white;
   border: solid 3px #4da6e2;
 }
-.button-warning {
+.button.button-warning {
   color: #fbcf64;
   background-color: white;
   border: solid 3px #fbcf64;
 }
-.button-red {
+.button.button-red {
   color: #ec7162;
   background-color: white;
   border: solid 3px #ec7162;
 }
 /*Заливка*/
-.button-filled{
+.button.button-filled {
   color: white;
   background-color: #777777;
 }
-.button-filled-primary{
+.button.button-filled-primary {
   color: white;
   background-color: #9477a7;
   border: solid 3px #9477a7;
 }
-.button-filled-success{
+.button.button-filled-success {
   color: white;
   background-color: #87c057;
   border: solid 3px #87c057;
 }
-.button-filled-info{
+.button.button-filled-info {
   color: white;
   background-color: #4da6e2;
   border: solid 3px #4da6e2;
 }
-.button-filled-warning{
+.button.button-filled-warning {
   color: white;
   background-color: #fbcf64;
   border: solid 3px #fbcf64;
 }
-.button-filled-red{
+.button.button-filled-red {
   color: white;
   background-color: #ec7162;
   border: solid 3px #ec7162;
