--- a/lw2/task1/style.css
+++ b/lw2/task1/style.css
@@ -71,13 +71,12 @@ body {
   margin: 4px 0px;
 }
 .text {
-  display: flex;
   line-height: 24px;
   color: #414141;
   width: 388px;
   margin-top: 12px;
 }
-.button-content {
+button {
   margin-top: 16px;
   width: 144px;
   background: #EC6041;
